src/test/deca/syntax/parser/invalid/test/pars_inv_while_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le while
//
// Resultats:
//    Ligne 12 : Erreur (oubli {expr})
//    
//
// Historique:
//    cree le 04/01/2023

{
    while (x < 5)
}
